# python-projects

guess-words/: pyproject.toml  word_files.txt
guess-words/guess_words/: commons.py  gamer.py  play.py  word_checker.py  words_loader.py
guess-words/tests/: test_word_checker.py  test_words_loader.py
user-manager-server/: pyproject.toml
user-manager-server/user_manager_server/: entities.py  level4_concrete_classes.py  level_1_entities.py  level_2_use_case_logic.py  level_3_adapters.py
