[tool.poetry]
name = "guess-words"
version = "0.1.0"
description = ""
authors = ["Alessandro <pedano.alessandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
